20241208 sd032 add fields

--- a/sd-s4apps01/salesdocumentreport/webapp/view/Main.view.xml
+++ b/sd-s4apps01/salesdocumentreport/webapp/view/Main.view.xml
@@ -640,7 +640,7 @@
                         </table:template>
                     </table:Column>
 
-                    <table:Column
+                    <!-- <table:Column
                         width="10rem"
                         sortProperty="ContributionProfit"
                         label="{i18n>ContributionProfit}"
@@ -652,7 +652,7 @@
                                 wrapping="false"
                             />
                         </table:template>
-                    </table:Column>
+                    </table:Column> -->
                     <table:Column
                         width="10rem"
                         sortProperty="Manufacturingcost"
@@ -682,7 +682,7 @@
                     </table:Column> -->
 
 
-                    <table:Column
+                    <!-- <table:Column
                         width="10rem"
                         sortProperty="GrossProfit"
                         label="{i18n>GrossProfit}"
@@ -694,7 +694,7 @@
                                 wrapping="false"
                             />
                         </table:template>
-                    </table:Column>
+                    </table:Column> -->
 
                     <!-- <table:Column
                         width="10rem"
