--- a/fico-s4apps01/zinventoryaging/webapp/view/Main.view.xml
+++ b/fico-s4apps01/zinventoryaging/webapp/view/Main.view.xml
@@ -21,7 +21,7 @@
                     <FlexBox fitContainer="true">
                         <smartFilterBar:SmartFilterBar id="idSmartFilterBar" entitySet="InventoryAging" useToolbar="false" smartVariant="__SVM01" persistencyKey="InventoryAgingSFB" initialized="onsMrilterBarInitialized" search="onSearch">
                             <smartFilterBar:controlConfiguration>
-                                <smartFilterBar:ControlConfiguration index='10' key="CompanyCode" mandatory="mandatory" filterType="single" controlType="dropDownList" visibleInAdvancedArea="true" label="{i18n>CompanyCode}"/>
+                                <smartFilterBar:ControlConfiguration index='10' key="CompanyCode" mandatory="mandatory" filterType="single" controlType="dropDownList" displayBehaviour="idAndDescription" visibleInAdvancedArea="true" label="{i18n>CompanyCode}"/>
                                 <smartFilterBar:ControlConfiguration index='20' key="FiscalYear" mandatory="mandatory" filterType="single" visibleInAdvancedArea="true" label="{i18n>FiscalYear}">
 				                    <smartFilterBar:customControl>
 					                    <!-- <DatePicker id="idFiscalYear" displayFormat="yyyy" /> -->
