--- a/sd-s4apps01/salesdocumentreport/webapp/view/Main.view.xml
+++ b/sd-s4apps01/salesdocumentreport/webapp/view/Main.view.xml
@@ -41,6 +41,7 @@
                         entitySet="SalesReport"
                         persistencyKey="SalesReportSFB"
                         search="onSearch"
+                         class="sapUiResponsiveMargin"
                     >
                         <smartFilterBar:controlConfiguration>
                             <!-- Sales Organization Bar -->
